fix: map_tooltip content-box was covering selector

--- a/host/front-end/CSS/style.css
+++ b/host/front-end/CSS/style.css
@@ -12,8 +12,14 @@
     top: 0%;
     left: 0%;
 }
+
 #game_lobby_block{
     aspect-ratio: 1400 / 764;
+}
+#map_tooltip{
+    left: 57%;
+    box-sizing: border-box;
+    border: 2px solid;
 }
 
 #switch_classic, #switch_tournament{
